$Id: Changes 1182 2014-04-03 08:52:00Z willem $                       -*-text-*-


**** 0.75 [unreleased]

Fix rt.cpan.org #94069

	Compile-time constant in Domain.pm/Text.pm cannot be used to
	store pointer to encoding object when using perlcc compiler.
	Thanks are due to Reini Urban for testing the revised code.

Fix rt.cpan.org #93764

	Resolver gives unhelpful errorstring when attempting to use
	IPv6-only nameserver without INET6 and Socket6 installed.

Fix rt.cpan.org #92626

	Clarify documentation surrounding SRV RR sorting

Feature

	Implement TSIG verified zone transfer.

Fix rt.cpan.org #92433 & #91241

	TSIG: implement sign/verify for multi-packet message.


**** 0.74 Jan 16, 2014

Fix rt.cpan.org #91306

	Nameserver crashes on malformed UDP query.

Fix rt.cpan.org #91241

	TSIG: Fix incorrectly generated %algbyval table.

Feature

	Add CAA, EUI48 and EUI64 RR implementation.


**** 0.73 Nov 29, 2013

Fix rt.cpan.org #88778

	$update->unique_push() does not work as advertised.

Fix rt.cpan.org #88744

	Nameserver crashes on malformed TCP query.

Fix rt.cpan.org #84601/#81942

	Fix memory leak on packet cleanup. Indirect self-reference via
	header prevented garbage collector from deallocating packet.

Feature rt.cpan.org #84468

	TSIG: add support for HMAC-SHA1 .. HMAC-SHA512

Fix rt.cpan.org #84110

	Incorrect parsing of PTR records in zonefile.

Fix rt.cpan.org #83755

	Erroneous attempt to invoke Net::LibIDN package in Domain.pm.

Fix rt.cpan.org #83078

	Can't locate Net/DNS/Resolver/linux.pm in @INC
	Conjecture:  eval{ ... };  if ($@) { ... };  broken by threads.

Fix rt.cpan.org #83075

	ZoneFile.pm wrongly rejects $TTL 0 directive.

Fix rt.cpan.org #82621

	Error string empty after failed TCP query.

Fix rt.cpan.org #82296

	IPv6 with embedded IPv4 address not mapped to ip6.arpa.

Fix rt.cpan.org #82294

	Perl taint inadvertently removed in Domain and Text objects.

Feature rt.cpan.org #53610

	add TSIG validation support


**** 0.72 Dec 28, 2012
